fix profile title spacing

--- a/src/scss/components/_profile.scss
+++ b/src/scss/components/_profile.scss
@@ -110,7 +110,7 @@ $profile-bad-color: $default-important-color !default;
 		}
 
 		&-title {
-			margin-left: $profile-spacing;
+			margin-left: ($profile-spacing / 2);
 		}
 
 		&-value {
